# strategy-builder

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  test.py  test2.py  token.json
core/: breakeven.py  margin.py  positions.py  probability.py  probability_service.py  session.py  spot.py  utils.py
ui/: app.py
